--- a/style.css
+++ b/style.css
@@ -39,12 +39,6 @@ a {
     align-items: center;
 }
 
-.header__logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .header__nav {
     display: flex;
     flex-direction: column;
@@ -115,14 +109,13 @@ a {
 
 .header__nav-item-list {
     display: flex;
-    gap: 5rem;
+    gap: 4rem;
 }
 
 .header__nav-item {
     font-size: 1.125rem;
     font-weight: 700;
 }
-
 
 /*   hero   */
 
@@ -185,10 +178,6 @@ a {
 }
 
 /* info */
-
-.info-links__btn-mob {
-    display: none;
-}
 
 .info-links {
     background-color: #5ca6ed;
@@ -271,27 +260,6 @@ a {
     align-items: center;
 }
 
-.news__tags {
-    display: flex;
-    justify-content: center;
-    gap: 0.813rem;
-
-}
-
-.news__tag {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #FFFFFF;
-    border-radius: 50px;
-    font-size: 0.75rem;
-    padding: 0.5rem 1.25rem;
-}
-
-.news__tag-link {
-    white-space: nowrap;
-}
-
 .news-card {
     width: 42%;
     display: flex;
@@ -323,21 +291,6 @@ a {
     position: relative;
 }
 
-.news__image-tag-top,
-.news__image-tag-bottom {
-    position: absolute;
-    left: 2.313rem;
-    z-index: 2;
-}
-
-.news__image-tag-top {
-    top: 1rem;
-}
-
-.news__image-tag-bottom {
-    bottom: 1rem;
-}
-
 .news-card__text-wrapper {
     display: flex;
     flex-direction: column;
@@ -347,26 +300,11 @@ a {
     gap: 1.5rem;
 }
 
-.new-card__title,
-.events-card__title,
-.events-card__text-author {
+.new-card__title {
     font-size: 1rem;
     font-weight: 700;
     color: #000000;
     line-height: 1.375rem;
-}
-
-.news-card:last-child {
-    position: relative;
-}
-
-.see-all-btn {
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform-origin: 0 0;
-    transform: rotate(90deg);
-    z-index: 2;
 }
 
 /* section-item common styles */
@@ -559,3 +497,271 @@ footer {
     font-size: 1rem;
     font-weight: 700;
 }
+
+@media (min-width: 1921px) {
+    .section {
+        width: 70%;
+        margin: 0.75rem auto 0 auto;
+    }
+
+    .footer-container {
+        justify-content: center;
+    }
+}
+
+@media (min-width: 1281px) and (max-width: 1440px) {
+
+    .header__nav-item-group {
+        gap: 1.5rem;
+    }
+
+    .header__nav-item_btn-input {
+        padding: 0 2rem 0 0;
+    }
+
+    .header__nav-item-list {
+        gap: 2.5rem;
+    }
+
+    .header__nav-item,
+    .header__nav-item_contacts-link {
+        font-size: 1rem;
+    }
+
+    .info-links__list {
+        gap: 1rem;
+    }
+
+    .info-links__list-item_hover {
+        padding-right: 54rem;
+    }
+
+    .popular-card__btn {
+        padding: 1.5rem 1.5rem;
+    }
+
+    .partners-links {
+        width: 64%;
+    }
+
+    .partners-links_color {
+        width: 35%;
+    }
+
+    .popular-card__btn-contacts {
+        padding: 1.5rem 3.5rem;
+    }
+}
+
+@media (max-width: 1280px) {
+
+    .header__container {
+        flex-direction: column;
+    }
+
+    .header__nav {
+        gap: 0;
+    }
+
+    .header__nav-item {
+        flex-wrap: wrap;
+        padding-top: 1.5rem;
+        gap: 0.8rem;
+    }
+
+    .header__nav-item-group {
+        gap: 1rem;
+    }
+
+    .header__nav-item-list {
+        gap: 1rem;
+        justify-content: space-between;
+    }
+
+    .header__nav-item_contacts-link {
+        font-size: 0.93rem;
+    }
+
+    .header__nav-item {
+        font-size: 0.85rem;
+    }
+
+    .info-links__list_header {
+        font-size: 2rem;
+    }
+
+    .info-links__list {
+        flex-wrap: wrap;
+        gap: 1.5rem;
+    }
+
+    .info-links__list_gap {
+        gap: 1rem;
+    }
+
+    .info-links__list-item {
+        font-size: 1rem;
+    }
+
+    .info-links__btn {
+        padding: 1rem;
+    }
+
+    .info-links__list-item_hover {
+        padding-right: 23rem;
+    }
+
+    .info-links__list-item_hover::placeholder {
+        font-size: 0.8rem;
+    }
+
+    .info-links_group {
+        flex-direction: column;
+        gap: 0.75rem;
+    }
+
+    .info-links_column {
+        width: 100%;
+    }
+
+    .info-links_color {
+        width: 100%;
+    }
+
+    .section-item__title {
+        font-size: 2.313rem;
+    }
+
+    .news-card {
+        width: 70%;
+    }
+
+    .popular-card {
+        width: 47.5%;
+    }
+
+    .popular-card__image-wrapper {
+        padding-top: 2rem;
+    }
+
+    .partners-links_group {
+        flex-direction: row;
+    }
+
+    .partners-links {
+        width: 60%;
+        gap: 0;
+    }
+
+    .partners__list {
+        padding-bottom: 2rem;
+        gap: 3.1rem;
+    }
+
+    .partners__list-img {
+        width: 200px;
+    }
+
+    .partners-link {
+        padding-top: 2rem;
+    }
+
+    .popular-card__btn-contacts {
+        padding: 1.5rem 1.5rem;
+    }
+
+    .partners-links__list_gap {
+        padding-top: 1rem;
+    }
+
+    .footer__container {
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 790px) {
+    .section-item-header {
+        padding: 0 0.3rem 0.3rem 0.3rem;
+    }
+
+    .news-card {
+        width: 100%;
+    }
+
+    .partners-links_group {
+        flex-direction: column;
+    }
+
+    .partners-links {
+        width: 100%;
+        padding: 1.5rem;
+    }
+
+    footer {
+        padding-top: 0.875rem;
+    }
+
+    .partners-link {
+        text-align: center;
+    }
+
+    .section-item {
+        padding-top: 0;
+        gap: 1.25rem;
+    }
+
+    .popular-card__btn {
+        padding: 1.5rem 2.5rem;
+    }
+
+    .info-links__list-item_hover {
+        padding-right: 0;
+        width: 140px;
+    }
+
+    .header__nav-item-list {
+        flex-wrap: wrap;
+    }
+
+    .info-links {
+        padding: 2.3rem;
+    }
+
+    .header__container {
+        padding: 1rem 1.125rem;
+    }
+
+    .header__nav-item-list {
+        justify-content: space-between;
+        gap: 0;
+    }
+
+    .header__nav-item {
+        justify-content: space-around;
+    }
+
+    .info-links__list_header {
+        font-size: 1.5rem;
+    }
+
+    .info-links__list-item {
+        font-size: 0.8rem;
+    }
+
+    .info-links {
+        gap: 1.5rem;
+    }
+
+    .info-links__list {
+        gap: 0.8rem;
+    }
+
+    .info-links__btn {
+        padding: 0.5rem;
+    }
+
+    .section-item__title {
+        font-size: 2rem;
+    }
+}
+
