--- a/style.css
+++ b/style.css
@@ -40,6 +40,73 @@ a:hover {
 
 /* header */
 
+.menu-button-container {
+    display: none;
+    height: 100%;
+    width: 30px;
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 1rem;
+}
+
+#menu-toggle {
+    display: none;
+}
+
+.menu-button,
+.menu-button::before,
+.menu-button::after {
+    display: block;
+    background-color: #ec9539;
+    position: absolute;
+    height: 4px;
+    width: 30px;
+    transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    border-radius: 2px;
+}
+
+.menu-button::before {
+    content: '';
+    margin-top: -8px;
+}
+
+.menu-button::after {
+    content: '';
+    margin-top: 8px;
+}
+
+#menu-toggle:checked+.menu-button-container .menu-button::before {
+    margin-top: 0px;
+    transform: rotate(405deg);
+}
+
+#menu-toggle:checked+.menu-button-container .menu-button {
+    background: rgba(255, 255, 255, 0);
+}
+
+#menu-toggle:checked+.menu-button-container .menu-button::after {
+    margin-top: 0px;
+    transform: rotate(-405deg);
+}
+
+.header__nav-item-list {
+    display: flex;
+    gap: 4rem;
+    position: relative;
+}
+
+.header__nav-item {
+    font-size: 1.125rem;
+    font-weight: 700;
+    display: flex;
+    gap: 4.5rem;
+    justify-content: space-between;
+    align-items: center;
+    color: #000000;
+}
+
 .header__container {
     display: flex;
     justify-content: space-between;
@@ -49,10 +116,12 @@ a:hover {
     align-items: center;
 }
 
-.header__nav-item {
+.header__nav {
     display: flex;
-    gap: 4.5rem;
+    flex-direction: column;
+    gap: 1.5rem;
 }
+
 
 .header__nav-item_btn {
     display: flex;
@@ -537,6 +606,10 @@ footer {
         padding: 0 2rem 0 0;
     }
 
+    .header__nav-item-list {
+        gap: 2.5rem;
+    }
+
     .input-padding {
         padding-right: 15rem;
     }
@@ -546,6 +619,7 @@ footer {
         flex-wrap: wrap;
     }
 
+    .header__nav-item,
     .header__nav-item_contacts-link {
         font-size: 1rem;
     }
@@ -577,6 +651,59 @@ footer {
 
 @media (max-width: 1280px) {
 
+    .menu-button-container {
+        display: flex;
+        z-index: 4;
+    }
+
+    .header__nav-item-list {
+        position: absolute;
+        z-index: 3;
+        top: 0;
+        right: 0;
+        width: 50%;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 0;
+        padding-top: 3rem;
+        padding-right: 3rem;
+    }
+
+    #menu-toggle~.header__nav-item-list .header__nav-item-burger {
+        height: 0;
+        margin: 0;
+        padding: 0;
+        border: 0;
+        transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    }
+
+    #menu-toggle:checked~.header__nav-item-list .header__nav-item-burger {
+        padding: 2rem;
+        transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    }
+
+    .header__nav-item-burger {
+        display: flex;
+        justify-content: center;
+        margin: 0;
+        width: 100%;
+        color: #000000;
+        background-color: #ffffff;
+        opacity: 80%;
+    }
+
+    .header__nav {
+        flex-direction: column-reverse;
+        gap: 1.5rem;
+        align-items: flex-end;
+    }
+
+    .header__nav-item-burger {
+        margin: 0 1rem;
+        overflow: hidden;
+    }
+
     .header-logo {
         max-width: 200px;
     }
@@ -592,8 +719,9 @@ footer {
     .header__nav-item {
         font-size: 0.85rem;
         flex-wrap: wrap;
-        gap: 0.5rem;
+        gap: 0.8rem;
         justify-content: flex-end;
+        text-align: center;
     }
 
     .info-links__list_header {
@@ -764,6 +892,29 @@ footer {
 
     .header__nav-item-list {
         flex-wrap: wrap;
+    }
+
+    .header__nav-item-list {
+        flex-wrap: wrap;
+    }
+
+    .info-links {
+        padding: 2.3rem;
+    }
+
+    .header__container {
+        padding: 1rem 1.125rem;
+        flex-direction: column;
+    }
+
+    .header__nav-item-list {
+        justify-content: space-between;
+        gap: 0;
+        width: 90%;
+    }
+
+    .header__nav-item {
+        justify-content: space-around;
     }
 
     .info-links {
