--- a/style.css
+++ b/style.css
@@ -432,7 +432,21 @@ a:hover {
     gap: 0.813rem;
     overflow-x: scroll;
     padding-bottom: 2.125rem;
+    position: relative;
 }
+
+/* .shadow {
+    position: absolute;
+    bottom: 38px;
+    transform: translateY(0);
+    background-color: #f9f9f9;
+    width: 229px;
+    height: 574px;
+    z-index: 3;
+    opacity: 70%;
+    right: 0;
+    border-radius: 20px 0 0 20px;
+} */
 
 .section-item-container::-webkit-scrollbar {
     height: 4px;
@@ -585,6 +599,180 @@ footer {
     font-weight: 700;
 }
 
+
+/********** CATALOG PAGE **********/
+
+.info-nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.info-nav_group {
+    display: flex;
+    gap: 0.75rem;
+}
+
+.info-nav_range {
+    background-color: #6EA4E7;
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    padding-right: 2rem;
+}
+
+.info-nav_range-header {
+    font-size: 1.125rem;
+    color: #FFFFFF;
+    font-weight: 600;
+    line-height: 1.438rem;
+    padding: 1.5rem 0 1.5rem 2rem;
+}
+
+.info-nav_range-img {
+    width: 40px;
+}
+
+.info-links__list-item_padding {
+    padding-right: 30.5rem;
+}
+
+.type-of_group {
+    display: flex;
+    gap: 2.75rem;
+}
+
+.type-of-goods {
+    display: flex;
+    gap: 1rem;
+}
+
+.type-of-goods_btn {
+    border: inherit;
+    background-color: inherit;
+}
+
+.type-of-price {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    padding-right: 3rem;
+}
+
+.type-of-price_header {
+    font-size: 0.875rem;
+    font-weight: 400;
+}
+
+.cards-item {
+    display: flex;
+    margin-top: 0.75rem;
+}
+
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.75rem;
+}
+
+.sidebar__container {
+    border-radius: 20px;
+    display: flex;
+    margin-right: 1rem;
+    position: relative;
+    flex-direction: column;
+}
+
+.burger-menu {
+    padding-top: 0.5rem;
+    display: none;
+    width: 25px;
+    position: absolute;
+    left: 10px;
+    top: 10px;
+}
+
+.burger-menu>span {
+    display: block;
+    width: 100%;
+    height: 3px;
+    border-radius: 50px;
+    background-color: #6EA4E7;
+    ;
+}
+
+.burger-menu>span:not(:last-child) {
+    margin-bottom: 5px;
+}
+
+.sidebar__chapter {
+    display: flex;
+    flex-direction: column;
+    background-color: #595959;
+    border-radius: 20px;
+    gap: 1.75rem;
+}
+
+.sidebar__chapter-link {
+    font-size: 0.875rem;
+    font-weight: 500;
+    line-height: 1.438rem;
+    color: #FFFFFF;
+}
+
+.sidebar__chapter-header {
+    font-size: 1.125rem;
+    color: #FFFFFF;
+    font-weight: 600;
+    line-height: 1.438rem;
+    cursor: pointer;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+    padding: 3rem 5.5rem 2rem 3rem;
+}
+
+.sidebar__chapter-header_padding {
+    padding-top: 0;
+}
+
+.sidebar__chapter-header_img {
+    width: 60px;
+}
+
+.accordion_target-checkbox {
+    display: flex;
+    gap: 0.35rem;
+    flex-direction: column;
+}
+
+.accordion_trigger {
+    color: #FFFFFF;
+}
+
+.popular-card__item {
+    width: 32.6%;
+}
+
+.socials {
+    display: flex;
+    align-items: center;
+    padding: 1.5rem 0 0 3.2rem;
+    gap: 0.3rem;
+}
+
+.socials a img {
+    width: 20px;
+}
+
+.socials a {
+    font-size: 0;
+}
+
+/********** ENDS CATALOG PAGE **********/
+
+
 @media (min-width: 1601px) {
     .section {
         max-width: 1600px;
@@ -647,6 +835,22 @@ footer {
     .popular-card__btn-contacts {
         padding: 1.5rem 3.5rem;
     }
+
+    /********** CATALOG PAGE **********/
+
+    .info-links__list-item_padding {
+        padding-right: 19.5rem;
+    }
+
+    .popular-card__item {
+        width: 32.46%;
+    }
+
+    .type-of_group {
+        gap: 0.75rem;
+    }
+
+    /********** ENDS CATALOG PAGE **********/
 }
 
 @media (max-width: 1280px) {
@@ -815,6 +1019,75 @@ footer {
     .footer__container {
         flex-wrap: wrap;
     }
+
+    /********** CATALOG PAGE **********/
+
+    .info-nav {
+        flex-wrap: wrap;
+        gap: 1.5rem;
+    }
+
+    .info-nav_range-header {
+        font-size: 0.8rem;
+        padding: 0 0 0 2rem;
+    }
+
+    .info-nav_range-img {
+        width: 30px;
+    }
+
+    .info-links__list-item_padding {
+        padding-right: 15rem;
+    }
+
+    .type-of-goods {
+        padding-left: 3rem;
+    }
+
+    .burger-menu {
+        display: block;
+    }
+
+    .sidebar__container {
+        max-width: 7%;
+        height: 3rem;
+        overflow: hidden;
+        transition: all 0.4s ease-out;
+        background-color: inherit;
+        padding: 3.938rem 2.688rem 3.813rem 3rem;
+        position: absolute;
+        z-index: 2;
+    }
+
+    .sidebar__chapter {
+        overflow: hidden;
+    }
+
+    .sidebar__container:hover,
+    .sidebar__chapter:hover,
+    .sidebar__container:active,
+    .sidebar__chapter:active {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .popular-card__item {
+        width: 49%;
+    }
+
+    .popular-card__btn_mob {
+        padding: 1.5rem 1.5rem;
+    }
+
+    .socials {
+        display: none;
+    }
+
+    footer {
+        padding-top: 0.75rem;
+    }
+
+    /********** ENDS CATALOG PAGE **********/
 }
 
 @media (max-width: 790px) {
@@ -950,4 +1223,55 @@ footer {
     .section-item__title {
         font-size: 2rem;
     }
+
+    /********** CATALOG PAGE **********/
+
+    .info-nav_group {
+        flex-direction: column;
+    }
+
+    .info-nav_range-header {
+        padding: 0.9rem 0 0.9rem 2rem;
+    }
+
+    .type-of-goods {
+        padding-left: 0;
+    }
+
+    .type-of-price {
+        padding-right: 0;
+    }
+
+    .sidebar__container:hover,
+    .sidebar__chapter:hover,
+    .sidebar__container:active,
+    .sidebar__chapter:active {
+        opacity: 95%;
+        height: auto;
+    }
+
+    .sidebar__chapter-header {
+        font-size: 0.8rem;
+    }
+
+    .sidebar__chapter-link {
+        font-size: 0.6rem;
+    }
+
+    .sidebar__container {
+        position: absolute;
+        right: 0;
+        display: block;
+        padding-right: 1rem;
+    }
+
+    .sidebar__chapter {
+        gap: 1rem;
+        justify-content: unset;
+    }
+    .burger-menu {
+        left: 20px;
+    }
+
+    /********** ENDS CATALOG PAGE **********/
 }
