--- a/style.css
+++ b/style.css
@@ -846,10 +846,6 @@ footer {
         width: 32.46%;
     }
 
-    .type-of_group {
-        gap: 0.75rem;
-    }
-
     /********** ENDS CATALOG PAGE **********/
 }
 
@@ -1023,8 +1019,17 @@ footer {
     /********** CATALOG PAGE **********/
 
     .info-nav {
-        flex-wrap: wrap;
+        flex-direction: column;
         gap: 1.5rem;
+    }
+
+    .info-nav_group {
+        width: 100%;
+    }
+
+    .type-of_group {
+        width: 100%;
+        justify-content: space-between;
     }
 
     .info-nav_range-header {
@@ -1226,8 +1231,13 @@ footer {
 
     /********** CATALOG PAGE **********/
 
+    .info-nav {
+        justify-content: center;
+    }
+
     .info-nav_group {
         flex-direction: column;
+        width: inherit;
     }
 
     .info-nav_range-header {
