--- a/style.css
+++ b/style.css
@@ -1037,6 +1037,80 @@ footer {
 
 /********** ENDS CATALOG PAGE **********/
 
+/********** ITEM PAGE ******************/
+.info-nav_back {
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+
+}
+
+.item,
+.item-top,
+.item-info,
+.item-quantity,
+.item-options {
+    display: flex;
+
+}
+
+.item {
+    padding: 3.3rem;
+    width: 100%;
+}
+
+.item-img {
+    width: 13%;
+}
+
+.item-img img {
+    width: 100%;
+}
+
+.item-top {
+    width: 100%;
+    gap: 7.5rem;
+}
+
+.info-nav_back-title {
+    color: #595959;
+    padding: 0;
+}
+
+.item-info {
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.item-info .cards-container_list-nav {
+    padding: 0;
+}
+
+.item-name {
+    color:#5ca6ed;
+}
+
+.item-code {
+    font-size: 1rem;
+    font-weight: 700;
+}
+
+.item-options .popular-card__list-checkbox_container {
+    flex-direction: row;
+}
+
+.item-options {
+    width: 100%;
+}
+
+.item-quantity {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
+/********** ITEM PAGE ENDS *************/
 
 @media (min-width: 1601px) {
     .section {
