added item page

--- a/style.css
+++ b/style.css
@@ -450,23 +450,19 @@ a:hover {
 } */
 
 .section-item-container::-webkit-scrollbar {
-    height: 4px;
+    height: 9px;
     background: #FFFFFF;
     border-radius: 10px;
 }
 
 
 .section-item-container::-webkit-scrollbar-thumb:horizontal {
-    background: #eb9539;
+    background: #eb953980;
     border-radius: 10px;
 }
 
-.section-item-container:hover::-webkit-scrollbar {
-    height: 14px;
-}
-
-.section-item-container::-webkit-scrollbar-thumb:horizontal:hover {
-    background-color: #fe890d;
+.section-item-container::-webkit-scrollbar-thumb:hover {
+    background: #eb9539;
 }
 
 
@@ -1042,21 +1038,13 @@ footer {
     display: flex;
     align-items: center;
     gap: 0.8rem;
-
-}
-
-.item,
-.item-top,
-.item-info,
-.item-quantity,
-.item-options {
-    display: flex;
-
+    cursor: pointer;
 }
 
 .item {
     padding: 3.3rem;
     width: 100%;
+    display: flex;
 }
 
 .item-img {
@@ -1070,16 +1058,21 @@ footer {
 .item-top {
     width: 100%;
     gap: 7.5rem;
+    display: flex;
+    align-items: center;
 }
 
 .info-nav_back-title {
     color: #595959;
     padding: 0;
+    padding-right: 3rem;
 }
 
 .item-info {
     flex-direction: column;
     gap: 1rem;
+    display: flex;
+    width: 100%;
 }
 
 .item-info .cards-container_list-nav {
@@ -1087,30 +1080,95 @@ footer {
 }
 
 .item-name {
-    color:#5ca6ed;
+    color: #5ca6ed;
 }
 
 .item-code {
     font-size: 1rem;
-    font-weight: 700;
+    font-weight: 500;
 }
 
 .item-options .popular-card__list-checkbox_container {
     flex-direction: row;
+    gap: 2rem;
+}
+
+.item-options {
+    justify-content: space-between;
+    padding-top: 7rem;
 }
 
 .item-options {
     width: 100%;
-}
-
-.item-quantity {
-    flex-direction: column;
+    display: flex;
     align-items: center;
-    justify-content: center;
 }
 
+.item-info_amount {
+    display: flex;
+    gap: 3.51rem;
+}
 
-/********** ITEM PAGE ENDS *************/
+.item-info_amount-btn {
+    padding: 1.5rem 6.5rem;
+}
+
+.info-links_color-white {
+    background-color: #FFFFFF;
+}
+
+.info-links__title {
+    color: #5ca6ed;
+}
+
+.info-links__title-color {
+    color: #ec9539;
+}
+
+.info-links__description {
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.info-links__marker {
+    list-style-type: circle;
+    color: #1f1f1f;
+    font-weight: 400;
+    font-size: 0.875rem;
+}
+
+.info-links__description_text {
+    color: #1f1f1f;
+    font-weight: 400;
+    font-size: 0.875rem;
+}
+
+.info-links__description_text-color {
+    color: #000000;
+    font-weight: 600;
+}
+
+.info-links__marker::before {
+    color: #eb9539;
+    content: "⬤";
+}
+
+.info-links__marker-container {
+    display: flex;
+    gap: 0.8rem;
+    flex-direction: column;
+}
+
+.item__title-color {
+    color: #595959;
+}
+
+.info-padding {
+    padding-top: 2.313rem;
+}
+
+/********** ENDS ITEM PAGE **********/
+
 
 @media (min-width: 1601px) {
     .section {
@@ -1190,6 +1248,14 @@ footer {
     }
 
     /********** ENDS CATALOG PAGE **********/
+
+    /********** ITEM PAGE **********/
+
+    .item-info_amount-btn {
+        padding: 1.5rem 5.5rem;
+    }
+
+    /********** ENDS ITEM PAGE **********/
 }
 
 @media (max-width: 1280px) {
@@ -1450,6 +1516,50 @@ footer {
     }
 
     /********** ENDS CATALOG PAGE **********/
+
+    /********** ITEM PAGE **********/
+
+    .info-nav_item {
+        flex-direction: row;
+    }
+
+    .info-links_seaching {
+        padding-right: 6rem;
+    }
+
+    .info-nav_back-title {
+        padding: 0 3rem 0 0;
+    }
+
+    .item {
+        padding: 1.3rem;
+    }
+
+    .item-top {
+        gap: 2.5rem;
+    }
+
+    .item-info_amount {
+        gap: 1.51rem;
+    }
+
+    .item-options {
+        padding-top: 4rem;
+    }
+
+    .item-options .popular-card__list-checkbox_container {
+        gap: 1rem;
+    }
+
+    .info-links_color-white {
+        padding: 1.3rem;
+    }
+
+    .info-padding {
+        padding-top: 1.313rem;
+    }
+
+    /********** ENDS ITEM PAGE **********/
 }
 
 @media (max-width: 790px) {
@@ -1693,4 +1803,34 @@ footer {
 
 
     /********** ENDS CATALOG PAGE **********/
+
+    /********** ITEM PAGE **********/
+
+    .info-nav_item {
+        flex-direction: column-reverse;
+    }
+
+    .info-nav_back-title {
+        padding: 0;
+    }
+
+    .item-top {
+        flex-direction: column-reverse;
+    }
+
+    .item-options {
+        flex-wrap: wrap;
+        padding-top: 1rem;
+        gap: 1.5rem;
+    }
+
+    .item-info_amount-btn {
+        padding: 0.5rem 4rem;
+    }
+
+    .item-img {
+        width: 100px;
+    }
+
+    /********** ENDS ITEM PAGE **********/
 }
