--- a/style.css
+++ b/style.css
@@ -472,15 +472,14 @@ a:hover {
     color: #ec9539;
 }
 
-.popular-card {
-    width: 25.5%;
+.popular-card__image {
+    width: 40%;
 }
 
 .popular-card__text-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0 3.3rem 3.3rem 3.3rem;
     gap: 1.5rem;
 }
 
@@ -488,7 +487,15 @@ a:hover {
     position: relative;
     display: flex;
     justify-content: center;
-    padding-top: 4rem;
+    flex-direction: column;
+    align-items: center;
+    gap: 3rem;
+}
+
+.popular-card__image-wrapper-text {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .popular-card__price {
@@ -775,6 +782,8 @@ footer {
 
 .popular-card__item {
     width: 32.6%;
+    padding: 3.3rem 3.3rem 3.3rem 3.3rem;
+    justify-content: space-between;
 }
 
 .socials {
